# wagtail-tw-blocks

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  cd.yml  ci.yml  docker-image.yml  docker-publish.yml  ruff.yml
wagtail_blocks/: __init__.py  apps.py  blocks.py  constants.py  values.py
wagtail_blocks/locale/ar/LC_MESSAGES/: django.po
wagtail_blocks/locale/cn/LC_MESSAGES/: django.po
wagtail_blocks/locale/de/LC_MESSAGES/: django.po
wagtail_blocks/locale/es/LC_MESSAGES/: django.po
wagtail_blocks/locale/fr/LC_MESSAGES/: django.po
wagtail_blocks/locale/tr/LC_MESSAGES/: django.po
wagtail_blocks/static/wagtail_blocks/: .prettierrc  README.md  package-lock.json  package.json
wagtail_blocks/static/wagtail_blocks/css/: app.css  styles.css
wagtail_blocks/templates/wagtail/: styles.html
wagtail_blocks/templates/wagtail/blocks/: accordion.html  alert.html  carousel.html  code.html  diff.html  document.html  hover_gallery.html  tabs.html
wagtail_blocks/templates/wagtail/blocks/code/: expo_snack.html  pen.html  sandbox.html  stack_blitz.html
wagtail_blocks/templates/wagtail/components/: breadcrumbs.html  form.html  languages.html  messages.html  next.html  pagination.html  prev.html  prev_next.html  themes.html  tree.html
wagtail_blocks/templates/wagtail_blocks/: styles.html
wagtail_blocks/templates/wagtail_blocks/blocks/: accordion.html  alert.html  browser.html  carousel.html  code.html  code_mockup.html  diff.html  fab.html  hover_gallery.html  image.html  list.html  phone.html  steps.html  tabs.html  timeline.html  toast.html  window.html
