[tool.poetry]
name = "wagtail-tw-blocks"
version = "1.1.0"
description = "A comprehensive library of production-ready `StreamField` components and UI elements designed for Wagtail CMS."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "wagtail_blocks" }]
homepage = "https://github.com/youzarsiph/wagtail-tw-blocks"
repository = "https://github.com/youzarsiph/wagtail-tw-blocks"
documentation = "https://github.com/youzarsiph/wagtail-tw-blocks"

[tool.poetry.dependencies]
python = ">=3.11"
django = ">=5.2.1"
wagtail = ">=7.2"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
